Fix: Prevent word break in the work header by adding a space around the pipe separator

--- a/puppetplays-web/styles/globals.css
+++ b/puppetplays-web/styles/globals.css
@@ -133,8 +133,8 @@ p > a:hover {
 .pipe-separator,
 .dash-separator {
   color: var(--color-bg-depth-2);
-  margin: 0 10px;
-  font-style: 16px;
+  margin: 0 4px;
+  font-size: 16px;
   font-weight: 400;
 }
 
